# autonomous-racing

./: LICENSE  README.md
autonomous-racing/: CMakeLists.txt  package.xml
autonomous-racing/config/: config.yaml
autonomous-racing/data/behindFireTruck/: behindFireTruck_0.db3  metadata.yaml
autonomous-racing/data/startPos/: metadata.yaml  startPos_0.db3
autonomous-racing/data/tightTurn/: metadata.yaml  tightTurn_0.db3
autonomous-racing/launch/: main.launch.py  start.launch.py
autonomous-racing/src/: ackerman.cpp  ackerman.h  coneFinder.cpp  coneFinder.h  controller.cpp  controller.h  display.cpp  display.h  laserProcessing.cpp  laserProcessing.h  mission.cpp  mission.h  pathFinder.cpp  pathFinder.h
autonomous-racing/src/nodeMains/: mainSample.cpp  main_coneFinder.cpp  main_display.cpp  main_mission.cpp  main_platform.cpp
autonomous-racing/test/: test_additionalGoalGeneration.cpp  test_isGoalWithinCones.cpp  test_isObstacleInWay.cpp  test_spline.cpp
