<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>autonomous-racing</name>
  <version>1.0.0</version>
  <description>Package for driving a car autonomously on a racing track</description>

  <maintainer email="turnernathan270@gmail.com">Nathan Turner</maintainer>

  <license>MIT</license>


  <author email="turnernathan270@gmail.com">Nathan Turner</author> 

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>rosbag2_cpp</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>ros2launch</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>rosbag2_cpp</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>ros2launch</exec_depend>


  <test_depend>ament_cmake_ros</test_depend>
  

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
